# doresare

./: .gitignore  README.md  docker-compose.dev.yml  docker-compose.prod.yml  doresare.code-workspace
.agent/rules/: code-style-guide.md  hardware-constrains.md  project-rules.md
.agent/workflows/: write-docs.md
.cursor/rules/: project_rules.md
.github/: copilot-instructions.md
.github/agents/: beastmode.agent.md
.github/workflows/: convert_openvino.yml
backend/: .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  doresare-backend.compose.yaml  download_models.py  pyproject.toml
backend/domain/: models.py  music_theory.py
backend/essentia_archive/: chord_detector_essentia.py
backend/infrastructure/audio_separation/: openvino_separator.py
backend/interface/: README.md  gradio_ui.py
backend/scripts/: convert_model_ci.sh
backend/services/: audio_extractor.py  bitwave_adapter.py  chord_analyzer.py  chord_detector.py  file_manager.py  font_manager.py  pipeline.py  video_renderer.py  youtube_downloader.py
backend/tests/: conftest.py  test_domain_models.py  test_env_presets.py  test_file_manager.py  test_font_manager.py  test_openvino_separator.py  test_pipeline.py
frontend/: .env.example  Dockerfile  Makefile  README.md  config.py  main.py  pyproject.toml
frontend/static/: app.js  custom.css  sse-handler.js
frontend/templates/: index.html  process.html
frontend/templates/partials/: ad_banner.html  error.html  head.html  process_content.html  processing.html  queue_status.html  queued.html  success.html  video_result.html
frontend/use_cases/: download_video.py
nginx/: nginx.conf
