[project]
name = "extractor-notas-frontend"
version = "0.1.0"
description = "Frontend for Extractor de notas y acordes musicales"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.20.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
    "httpx>=0.27.0",
    "gradio-client>=0.6.0",
    "pydantic-settings>=2.0.0",
    "yt-dlp>=2023.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
