[project]
name = "notes-extractor-frontend"
version = "0.1.0"
description = "Frontend for extracting musical notes and chords"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.20.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
    "httpx>=0.27.0",
    "gradio-client>=0.6.0",
    "pydantic-settings>=2.0.0",
    "yt-dlp>=2025.12.8",
    "certifi>=2025.11.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "ruff>=0.14.10",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
